2015-10-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-323

	* controlfiles/instruments/metmm/sensor_descriptions/apply_metmm.arts:
	Adopted to name change below.

	* src/m_sensor.cc (sensor_responseBackendMetMM): Renamed. This as
	the method handles more sensor parts than backend.

	(sensor_responseMetMM): New name of the WSM.

	* src/m_sensor.cc (sensor_responseMixerBackendPrecalcWeights): Started.

2015-10-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-322

	* src/m_oem.cc:
	* src/oem.cc: Still work in progress. If you are curious, see
	built-in for oem WSM and oem_diagnostics WSV to get an idea about
	the plans.

2015-10-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-321

	* src/oem.cc:
	* src/m_oem.cc: Work in progress. Adding diagnostics and different
	features to control calculations and reporting.

	* src/workspace.cc: Renamed inverse of covariance matrices, to
	covmat_sx_inv and covmat_so_inv.

2015-10-02 Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-320

	* src/oem.* (oem_gauss_newton, oem_levenberg_marquardt): Adapted
	interface and corrected computation of fitted state vector and gain
	matrix.

	* src/m_oem.cc (oem): Adapted function calls to oem_gauss_newton and
	oem_levenberg_marquardt.

	* src/test_oem.cc (test_oem_linear, test_oem_gauss_newton, test_levenberg_marquardt):
	Adapted function calls to oem_linear_nform, oem_gauss_newton and
	oem_levenberg_marquardt.

2015-10-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-319

	* src/oem.cc (oem_linear_nform): Changed order of input, following
	arts standard. yf now not updated inside the function. x and G
	now given their size inside function.

	* src/oem.cc: Changed order of input also for other oem functions.

	* src/m_oem.cc (oem): Some dummy code removed. Adopted to change
	of oem intyernal functions.

	* src/workspace.cc: Added invcovmat_sx and invcovmat_s0.

	* src/agendas.cc: Removed inversion_agenda_old.
