@@ -1,5 +1,14 @@
 2015-10-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-324
+
+	* src/m_sensor.cc (sensor_responseMixerBackendPrecalcWeights): Now
+	seems finished.
+
+	* src/m_basic_types.cc (MatrixCopySparse): New WSM.
+
+2015-10-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-323
 
 	* controlfiles/instruments/metmm/sensor_descriptions/apply_metmm.arts:
